8377137: archive with compact object headers